Chart/templates/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: argocd-strip-all@kubernetes
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rolloutfe
                port:
                  number: 8980
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /akhq
            pathType: Prefix
            backend:
              service:
                name: akhq
                port:
                  number: 9000
          - path: /seq
            pathType: Prefix
            backend:
              service:
                name: seq
                port:
                  number: 5341
          - path: /calloutqueuebe
            pathType: Prefix
            backend:
              service:
                name: calloutqueuebe
                port:
                  number: 5135
          - path: /schemaregistry
            pathType: Prefix
            backend:
              service:
                name: schemaregistry
                port:
                  number: 8081
          - path: /aspire-dashboard
            pathType: Prefix
            backend:
              service:
                name: aspire-dashboard
                port:
                  number: 18888
